<resources>
    <string name="app_name">DynamicFragment</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="name">Name :</string>
    <string name="enter">Enter your name</string>
    <string name="eg">Enter your grade</string>
    <string name="ea">Enter your address</string>
    <string name="clas">Grade :</string>
    <string name="addr">Address :</string>
    <string name="login">Login</string>
    <string name="pass">Password :</string>


    <string name="n1">Num 1:</string>
    <string name="e1">Enter number 1</string>
    <string name="n2">Num 2:</string>
    <string name="e2">Enter number 2</string>
    <string name="add">Add</string>

    <string name="about">About Us</string>
    <string name="des">Hello everyone,
    Let me describe about our application.
    This application is designed usind android studio with java programming language.
    </string>
</resources>