<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/purple_200"
    tools:context=".AFragment">

    <!-- TODO: Update blank fragment layout -->
    <TextView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:text="@string/name"
        android:textStyle="bold"
        android:textSize="40dp"
        android:textColor="@color/white"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="20dp"/>

    <EditText
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="150dp"
        android:layout_marginTop="35dp"
        android:hint="@string/enter"

        />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:text="@string/clas"
        android:textStyle="bold"
        android:textSize="40dp"
        android:textColor="@color/white"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="90dp"/>

    <EditText
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="150dp"
        android:layout_marginTop="100dp"
        android:hint="@string/eg"

        />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:text="@string/addr"
        android:textStyle="bold"
        android:textSize="40dp"
        android:textColor="@color/white"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="150dp"/>

    <EditText
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="190dp"
        android:layout_marginTop="160dp"
        android:hint="@string/ea"

        />
    <TextView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:text="@string/pass"
        android:textStyle="bold"
        android:textSize="40dp"
        android:textColor="@color/white"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="200dp"/>

    <EditText
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="220dp"
        android:layout_marginTop="210dp"
        android:inputType="textPassword"
        android:hint="*********"
        android:textSize="20dp"

        />


    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/login"
        android:layout_marginTop="260dp"
        android:textSize="30sp"
        android:backgroundTint="@color/teal_700"
        android:layout_marginLeft="260dp"
        />

</FrameLayout>