<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/teal_200"
    tools:context=".BFragment">

    <!-- TODO: Update blank fragment layout -->

    <TextView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:text="@string/n1"
        android:textStyle="bold"
        android:textSize="40dp"
        android:textColor="@color/white"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="90dp"/>

    <EditText
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="150dp"
        android:layout_marginTop="100dp"
        android:hint="@string/e1"

        />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:text="@string/n2"
        android:textStyle="bold"
        android:textSize="40dp"
        android:textColor="@color/white"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="150dp"/>

    <EditText
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="190dp"
        android:layout_marginTop="160dp"
        android:hint="@string/e2"

        />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/add"
        android:layout_marginTop="240dp"
        android:layout_marginLeft="260dp"
        android:textSize="30dp"
        android:backgroundTint="@color/purple_200"
        />


</FrameLayout>